--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,32 @@
 .app{
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
+    /* background-color: #e6e2e2cf; */
 }
 
-body::-webkit-scrollbar {
-    width: 1em;
+/* For highlighting selected text */
+*::-moz-selection { /* Code for Firefox */
+  color: red;
+  background: yellow;
+}
+
+*::selection {
+  color: red;
+  background: yellow;
+}
+
+
+*::-webkit-scrollbar {
+    width: 1px;
+    display: none;
   }
    
-  body::-webkit-scrollbar-track {
+  *::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
    
-  body::-webkit-scrollbar-thumb {
+  *::-webkit-scrollbar-thumb {
     background-color: darkgrey;
     outline: 1px solid slategrey;
   }
