--- a/src/components/ProductCategory/category.css
+++ b/src/components/ProductCategory/category.css
@@ -1,7 +1,7 @@
 .product__category{
 background-color: #ffffff;
 display: flex;
-margin-bottom: 10px;
+margin-bottom: 10px !important;
 padding: 5px 0px 5px 5px;
 justify-content: space-around;
 margin: auto;
