--- a/src/components/ProductCard/productCard.css
+++ b/src/components/ProductCard/productCard.css
@@ -1,6 +1,7 @@
 .product__card__container{
     margin: 10px 0px;
-    border: 1px solid rgba(0,0,0,.1);
+    border-top: 1px solid rgba(0,0,0,.1);
+    border-bottom: 1px solid rgba(0,0,0,.1);
     background-color: #ffffff;
 }
 
