--- a/src/components/Alert/wishListAlert/wishListAlert.css
+++ b/src/components/Alert/wishListAlert/wishListAlert.css
@@ -4,7 +4,7 @@
     bottom: 30px;
     max-width: fit-content;
     align-items: center;
-    right: 41vw;
+    left: 42vw;
     min-width: fit-content;
     /* left: 50%; */
     margin: auto;
