--- a/src/pages/singleProductPage/singleProduct.css
+++ b/src/pages/singleProductPage/singleProduct.css
@@ -2,21 +2,23 @@
     width: 100%;
     min-height: 100%;
     background: #F1F3F6;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     /* display: grid;
     grid-template-columns: 1fr 2fr; */
     display: flex;
-    position: relative;
+    /* position: relative; */
 }
 
 .single__product__carousel__container{
     background: #ffffff;
     height: fit-content;
-    min-width: 23em;
-    max-width: 23em;
+    min-width: 30em;
+    /* max-width: 30em; */
     border: 1px solid #e2e2e2;
     position: sticky;
-    top: 5em;
+    position: -webkit-sticky;
+    top: 69px;
+    bottom: 0;
 }
 
 .single__product__wishlist__button{
@@ -76,10 +78,89 @@
     font-size: 16px;
 }
 
+.single__product__heading{
+    margin: 10px 49px 5px 40px;
+    text-align: start;
+    /* padding: 0px 31px 0px 0px; */
+}
+.single__product__heading > span{
+    font-weight: 600;
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 1.5px;
+}
 
-/* 
+.single__product__price{
+    margin: 30px 36px;
+    text-align: start;
+    padding: 0px 31px 0px 0px;
+    display: flex;
+}
+.single__product__price >span{
+    font-size: 30px;
+    /* vertical-align: text-top; */
+    letter-spacing: 2.5px;
+}
+
+.similar__products{
+    padding: 0px 10px;
+    background: #EFF1F4;
+}
+
+
 @media screen and (max-width:900px) {
     .single__product__container{
-        grid-template-columns: 1fr;
+        padding: 0px;
     }
-} */
+    .single__product__carousel__container{
+        min-width: 23em;
+    }
+    .similar__products{
+        padding: 0px;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .single__product__heading{
+        margin: 10px 0px 5px 20px;
+    }
+    .single__product__heading>span{
+        font-size: 15px;
+    }
+    .single__product__price>span{
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width:650px) {
+    .single__product__container{
+        flex-direction: column;
+        background-color: #ffffff;
+        align-items: center;
+    }
+    .single__product__carousel__container{
+        position: relative;
+        top: 0px;
+        border: none;
+        width: 70%;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .single__product__carousel__container{
+        width: 80%;
+    }
+    .single__product__heading{
+        margin: 10px 0px 5px 10px;
+    }
+    .single__product__price{   
+        margin: 15px 14px 6px 14px;
+        }
+    .single__product__heading>span{
+        font-size: 14px;
+    }
+
+    .single__product__price>span {
+        font-size: 23px;
+    }
+}
