--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,6 +1,6 @@
 .home{
     width: 100vw;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* margin-top: 69px;  */
     /* background-color: #e6e2e2cf; */
     background-color: #F1F3F6;
@@ -8,7 +8,7 @@
 
 .home__wrapper{
     width: 100vw;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding: 0px 10px 10px 10px;
     /* background-color: #e6e2e2cf; */
 }
