--- a/src/pages/singleProductPage/singleProduct.css
+++ b/src/pages/singleProductPage/singleProduct.css
@@ -1,166 +1,187 @@
-.single__product__container{
-    width: 100%;
-    min-height: 100%;
-    background: #F1F3F6;
-    padding: 10px 10px 0px 10px;
-    /* display: grid;
+.single__product__container {
+  width: 100%;
+  min-height: 100%;
+  background: #ffffff;
+  padding: 10px 10px 0px 10px;
+  /* display: grid;
     grid-template-columns: 1fr 2fr; */
-    display: flex;
-    /* position: relative; */
+  display: flex;
+  /* position: relative; */
 }
 
-.single__product__carousel__container{
-    background: #ffffff;
-    height: fit-content;
-    min-width: 30em;
-    /* max-width: 30em; */
-    border: 1px solid #e2e2e2;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 69px;
-    bottom: 0;
+.single__product__carousel__container {
+  background: #ffffff;
+  height: fit-content;
+  min-width: 30em;
+  /* max-width: 30em; */
+  border: 1px solid #e2e2e2;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 69px;
+  bottom: 0;
 }
 
-.single__product__wishlist__button{
-    width: 18px;
-    height: 18px;
-    position: absolute;
-    display: flex;
-    top: 3px;
-    border: 1px solid #f0f0f0;
-    border-radius: 50%;
-    padding: 17px;
+.single__product__wishlist__button {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  display: flex;
+  top: 3px;
+  border: 1px solid #f0f0f0;
+  border-radius: 50%;
+  padding: 17px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  right: 4px;
+  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
+  background: #ffffff;
+}
+
+.single__product__description__container {
+  background: #ffffff;
+}
+
+.single__product__carousel__container .button__group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.single__product__carousel__container .button__group .cart {
+  padding: 13px 8px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
+  width: 98%;
+  border: none;
+  margin: 0px 10px 12px 10px;
+  background: #ff9f00;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.single__product__carousel__container .button__group .cart span svg {
+  color: #ffffff;
+}
+
+.single__product__carousel__container .button__group .bolt {
+  padding: 13px 8px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
+  width: 98%;
+  border: none;
+  margin: 0px 10px 12px 10px;
+  background: #f46326;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.single__product__heading {
+  margin: 10px 49px 5px 40px;
+  text-align: start;
+  /* padding: 0px 31px 0px 0px; */
+}
+.single__product__heading > span {
+  font-weight: 600;
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 1.5px;
+}
+
+.single__product__rating {
+  padding: 0px 40px;
+  margin-top: 10px;
+}
+
+.single__product__rating .ant-tag span {
+  font-size: 12px;
+}
+
+.single__product__rating .rating__text {
+  color: grey;
+  font-size: 14px;
+}
+
+.single__product__price {
+  margin: 16px 36px;
+  text-align: start;
+  padding: 0px 31px 0px 0px;
+  display: flex;
+}
+.single__product__price > span {
+  font-size: 30px;
+  /* vertical-align: text-top; */
+  letter-spacing: 2.5px;
+}
+
+.similar__products {
+  padding: 0px 10px;
+  background: #eff1f4;
+}
+
+@media screen and (max-width: 900px) {
+  .single__product__container {
+    padding: 0px;
+  }
+  .single__product__carousel__container {
+    min-width: 23em;
+  }
+  .similar__products {
+    padding: 0px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .single__product__heading {
+    margin: 10px 0px 5px 20px;
+  }
+  .single__product__heading > span {
+    font-size: 15px;
+  }
+  .single__product__rating {
+    padding: 0px 22px;
+  }
+  .single__product__price {
+    margin: 16px 21px;
+  }
+  .single__product__price > span {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .single__product__container {
+    flex-direction: column;
+    background-color: #ffffff;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    right: 4px;
-    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%);
-    background: #ffffff;
-
-}
-
-.single__product__description__container{
-    background: #ffffff;
-}
-
-.single__product__carousel__container .button__group{
-    display: flex;
-    justify-content: space-around;
-}
-
-.single__product__carousel__container .button__group .cart{
-    padding: 13px 8px;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
-    width: 98%;
+  }
+  .single__product__carousel__container {
+    position: relative;
+    top: 0px;
     border: none;
-    margin: 0px 10px 12px 10px;
-    background: #ff9f00;
-    color: #ffffff;
-    cursor: pointer;
-    font-size: 16px;
+    width: 70%;
+  }
 }
 
-.single__product__carousel__container .button__group .cart span svg{
-    color: #ffffff;
-}
-
-.single__product__carousel__container .button__group .bolt{
-    padding: 13px 8px;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
-    width: 98%;
-    border: none;
-    margin: 0px 10px 12px 10px;
-    background: #F46326;
-    color: #ffffff;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.single__product__heading{
-    margin: 10px 49px 5px 40px;
-    text-align: start;
-    /* padding: 0px 31px 0px 0px; */
-}
-.single__product__heading > span{
-    font-weight: 600;
-    line-height: 1.5;
-    font-size: 16px;
-    letter-spacing: 1.5px;
-}
-
-.single__product__price{
-    margin: 30px 36px;
-    text-align: start;
-    padding: 0px 31px 0px 0px;
-    display: flex;
-}
-.single__product__price >span{
-    font-size: 30px;
-    /* vertical-align: text-top; */
-    letter-spacing: 2.5px;
-}
-
-.similar__products{
+@media screen and (max-width: 500px) {
+  .single__product__carousel__container {
+    width: 80%;
+  }
+  .single__product__heading {
+    margin: 10px 0px 5px 10px;
+  }
+  .single__product__rating {
     padding: 0px 10px;
-    background: #EFF1F4;
-}
+  }
+  .single__product__price {
+    margin: 15px 14px 6px 14px;
+  }
+  .single__product__heading > span {
+    font-size: 14px;
+  }
 
-
-@media screen and (max-width:900px) {
-    .single__product__container{
-        padding: 0px;
-    }
-    .single__product__carousel__container{
-        min-width: 23em;
-    }
-    .similar__products{
-        padding: 0px;
-    }
-}
-
-@media screen and (max-width:800px) {
-    .single__product__heading{
-        margin: 10px 0px 5px 20px;
-    }
-    .single__product__heading>span{
-        font-size: 15px;
-    }
-    .single__product__price>span{
-        font-size: 28px;
-    }
-}
-
-@media screen and (max-width:650px) {
-    .single__product__container{
-        flex-direction: column;
-        background-color: #ffffff;
-        align-items: center;
-    }
-    .single__product__carousel__container{
-        position: relative;
-        top: 0px;
-        border: none;
-        width: 70%;
-    }
-}
-
-@media screen and (max-width:500px) {
-    .single__product__carousel__container{
-        width: 80%;
-    }
-    .single__product__heading{
-        margin: 10px 0px 5px 10px;
-    }
-    .single__product__price{   
-        margin: 15px 14px 6px 14px;
-        }
-    .single__product__heading>span{
-        font-size: 14px;
-    }
-
-    .single__product__price>span {
-        font-size: 23px;
-    }
+  .single__product__price > span {
+    font-size: 23px;
+  }
 }
