--- a/src/components/Card/card1.css
+++ b/src/components/Card/card1.css
@@ -9,6 +9,11 @@
     background-color: #ffffff;
     position: relative;
 }
+
+.card__container:hover{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
 .card__container .card__image__container{
     height: 130px;
     width: 150px;
@@ -52,6 +57,27 @@ padding-top: 16px;
 .wishlist__button img{
     width: 100%;
     height: 100%;
+}
+
+.card__rating__container{
+    display: flex;
+    align-items: center;
+}
+
+.card__rating__container .ant-tag{
+    font-size: 10px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+}
+
+.card__rating__container .ant-tag .anticon-star{
+    font-size: 10px;
+}
+
+.card__rating__container .rating__text{
+    font-size: 10px;
+    color: grey;
 }
 
 .card__price__container h4{
