--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -3,6 +3,10 @@
     border-radius: 4px;
 }
 
+/* .carousel ul li{
+    width: fit-content !important;
+} */
+
 .ant-carousel .slick-dots li{
     width: 30px !important;
     margin-right: 5px !important;
