--- a/src/components/nav/header.css
+++ b/src/components/nav/header.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgba(42, 42, 150, 0.5);
+  background-color: #2774F0;
   justify-content: space-between;
   z-index: 12;
   height: 69px;
