--- a/src/pages/admin/subCategory/subcategory.css
+++ b/src/pages/admin/subCategory/subcategory.css
@@ -1,22 +1,26 @@
 .subcategory{
     width: 100vw;
-    min-height: 100vh;
-    margin-top: 129px;
+    /* min-height: 100vh; */
+    /* margin-top: 129px; */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.subcategory .subcategory__wrapper{
+/* .subcategory .subcategory__wrapper{
     margin-top: 8px;
     max-width: 25em;
-}
+} */
 
 .subcategory__list__wrapper{
     min-width: 26em;
     min-height: 25em;
     padding: 0px 7px;
     text-align: center;
+}
+
+.subcategory__list__wrapper .search{
+    min-height: 0px;
 }
 
 .subcategory__list__wrapper .list__container{
@@ -31,10 +35,10 @@
 }
 
 /* //search bar */
-.search .ant-input-search-button{
+/* .search .ant-input-search-button{
     margin-top: 7px;
 height: 29px;
-}
+} */
 .search .ant-input-group-addon{
    background-color: transparent !important;
 }
