--- a/src/pages/auth/login.css
+++ b/src/pages/auth/login.css
@@ -1,36 +1,36 @@
-.login{
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 69px;
+.login {
+  width: 100vw;
+  min-height: 77vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.logo__wrapper{
-    width: max-content;
-margin-bottom: 20px;
+.logo__wrapper {
+  width: max-content;
+  margin-bottom: 20px;
 }
 
 .logo__wrapper img {
-    width: 65px;
+  width: 65px;
 }
-.anticon-user,.anticon-lock > svg{
-    width: 21px !important;
-    height: 36px;
-    color: #686767;
+.anticon-user,
+.anticon-lock > svg {
+  width: 21px !important;
+  height: 36px;
+  color: #686767;
 }
 
 #components-form-demo-normal-login .login-form {
-    max-width: 300px;
-  }
-  #components-form-demo-normal-login .login-form-forgot {
-    float: right;
-  }
-  #components-form-demo-normal-login .ant-col-rtl .login-form-forgot {
-    float: left;
-  }
-  #components-form-demo-normal-login .login-form-button {
-    width: 100%;
-  }
+  max-width: 300px;
+}
+#components-form-demo-normal-login .login-form-forgot {
+  float: right;
+}
+#components-form-demo-normal-login .ant-col-rtl .login-form-forgot {
+  float: left;
+}
+#components-form-demo-normal-login .login-form-button {
+  width: 100%;
+}
