--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -9,9 +9,9 @@
 /* Empty Cart */
 .cart__empty__container {
   background-color: #ffffff;
-  border: 1px solid #e2e2e2e2;
+  /* border: 1px solid #e2e2e2e2; */
   height: 100%;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
 }
 
 .cart__empty__heading {
@@ -218,14 +218,17 @@
 @media screen and (max-width: 1100px) {
   .cart__container {
     padding: 2px 0px;
-    min-height: 100vh;
+    background: #ffffff;
+    /* min-height: 100vh; */
   }
 
   .cart__fill__container {
-    flex-direction: column;
+    display: block;
+    min-height: 79vh;
+    /* flex-direction: column;
     gap: 3px;
-    align-items: center;
-    height: 100vh;
+    align-items: center; */
+    /* height: 100vh; */
   }
 
   .cart__fill__item__container {
@@ -241,6 +244,7 @@
   .cart__fill__price__details__container {
     width: 100%;
     border: none;
+    box-shadow: none;
   }
 
   .proceed__to__checkout {
@@ -290,6 +294,11 @@
 
   .cart__fill__price__details__total::after {
     content: none;
+  }
+
+  .proceed__to__checkout>button{
+    font-size: 16px;
+    padding: 11px;
   }
 }
 
