--- a/src/pages/user/password.css
+++ b/src/pages/user/password.css
@@ -1,11 +1,11 @@
 .password{
     width: 100vw;
-    min-height: 100vh;
+    min-height: 89vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 69px;
+    /* margin-top: 69px; */
 }
 
 .logo__wrapper{
